--- a/content.tex
+++ b/content.tex
@@ -231,7 +231,7 @@ A partial specification of the \hs{Symantics} (a pun on \emph{syntax} and \emph{
 The arrow \hs{:->} is the function arrow in the embedded language, \eg \hs{repr (a :-> b)}, in contrast to the function arrow \hs{->} of the host language.
 
 \begin{figure}
-\centering
+%\centering
 \begin{code}
 class Symantics repr where
   lam   :: (repr a -> repr b) -> repr (a :-> b)
@@ -252,7 +252,7 @@ We can define most language constructs to behave like their Haskell counterpart,
 However, instead of using a Haskell-based implementation like \textsf{Data.IORef} for the definition of the mutable reference aspect of our language, we implement these constructs as invocations of the memory manager (see Figure~\ref{lst_observing_memory_access}).
 
 \begin{figure}
-\centering
+%\centering
 \begin{code}
 newtype RefMemAcc =  RMA SimM
 
@@ -334,7 +334,7 @@ Although initially used solely for the purpose of dealing with existentially qua
 \subsection{Monads}
 \label{sec:impl-monads}
 \begin{figure}
-\centering
+%\centering
 \begin{code}
 type SimMonad =  StateT SimState IO
 data SimState = ...
@@ -429,8 +429,9 @@ newtype Coroutine m o i r
      -> Coroutine m i2 o r)  r) }
 \end{code}
 we make an attempt to reach our goal. 
-However, to make this code valid Haskell, we need to reference \hs{i2} on the left hand side. 
-Using some more advanced tricks, like a type class for all the chain \hs{i}, \hs{i2}, \dots\ does not really help: all the types on the RHS still need to be listed on the LHS, thus exploding the definition.
+However, to make this code valid Haskell, we need to reference \hs{i2} on the left hand side: \hs{Coroutine m i i2 o r}.
+In the type of the \hs{resume} function we need to reference \hs{Coroutine} correctly, hence we write \hs{Coroutine m i2 i3 o r} there, and so on.
+Using some more advanced tricks, like a type class for all the chain \hs{i}, \hs{i2}, \hs{i3}, \dots\ does not really help: all the types on the RHS still need to be listed on the LHS, thus exploding the definition.
 
 %% this is for the case it works. It does not.
 % \paragraph{What we did.} We implemented the coroutine monad transformer for the parameterised monads \olcomment{show some code?}.
